--- a/Example.Rmd
+++ b/Example.Rmd
@@ -8,7 +8,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## R Markdown
-### This script does
+### This script does show three countries GDP over the years. Uganda had big recession in late 80s early 90. Albania also had recession in late 80s early 90s but recovered rapidly aftreward.
+
 ```{r}
 New_dat = read.csv("data/gapminder.csv")
 
